--- a/Selectel.csproj
+++ b/Selectel.csproj
@@ -21,7 +21,7 @@
     <PackageCertificateThumbprint>4958AD8AF97FD753A90F3257D50A46FA135D3689</PackageCertificateThumbprint>
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
-    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm|arm64</AppxBundlePlatforms>
@@ -127,8 +127,10 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Libs\SelectelApi\Methods\Billing.cs" />
     <Compile Include="Libs\SelectelApi\Methods\Servers.cs" />
     <Compile Include="Libs\SelectelApi\Responses\BasicResponse.cs" />
+    <Compile Include="Libs\SelectelApi\Responses\Billing.cs" />
     <Compile Include="Libs\SelectelApi\Responses\Servers.cs" />
     <Compile Include="Libs\SelectelApi\SelectelApi.cs" />
     <Compile Include="Libs\Utils.cs" />
@@ -142,6 +144,7 @@
     <Compile Include="UI\Elements\PowerButtons.cs" />
     <Compile Include="UI\Elements\ServerElement.cs" />
     <Compile Include="UI\Elements\TextWithCopy.cs" />
+    <Compile Include="UI\Frames\PaymentHistory.cs" />
     <Compile Include="UI\Frames\ServerInfo.cs" />
     <Compile Include="UI\Frames\ServersList.cs" />
   </ItemGroup>
@@ -227,11 +230,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LiveCharts.Uwp">
-      <Version>0.8.0</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.10</Version>
+      <Version>6.2.12</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp">
       <Version>6.1.1</Version>
